--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,7 @@ jobs:
         run: ./gradlew lintDebug --no-daemon --no-parallel --stacktrace
 
       - name: Upload Lint Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: lint-report
