--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -5,26 +5,26 @@ runs:
   steps:
     - name: Checkout main repository
       uses: actions/checkout@v4
+
+    - name: Clean older folder to download new one
+      run: rm -rf ./about-module
       shell: bash
 
     - name: Checkout about-module
       uses: actions/checkout@v4
       with:
         repository: ${{ github.actor }}/japl-android-about-module
+        ref: feature/update-versions
         path: ./about-module
-      shell: bash
 
     - name: Setup Java
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '21'
-      shell: bash
 
     - name: Set up Android SDK
       uses: android-actions/setup-android@v3
-      shell: bash
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
-      shell: bash
