--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,9 @@ jobs:
     name: Lint Code
     runs-on: ubuntu-latest
     steps:
+
+      - uses: actions/checkout@v4
+      
       - name: Setup Environment
         uses: ./.github/actions/setup
 
@@ -14,6 +17,7 @@ jobs:
         run: ./gradlew lintDebug --no-daemon --no-parallel --stacktrace
 
       - name: Upload Lint Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: lint-report
