--- a/.github/workflows/merge-deploy.yml
+++ b/.github/workflows/merge-deploy.yml
@@ -12,8 +12,12 @@ jobs:
   lint:
     uses: ./.github/workflows/lint.yml
 
+  lint:
+    uses: ./.github/workflows/lint.yml
+
   test:
     needs: [lint]
+    if: always()
     uses: ./.github/workflows/test.yml
 
   build:
