--- a/.github/workflows/merge-deploy.yml
+++ b/.github/workflows/merge-deploy.yml
@@ -7,6 +7,9 @@ on:
       - main
       - master
   workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
 
