--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,11 +56,13 @@ jobs:
       - name: Build Release AAB
         run: |
           ./gradlew bundleRelease \
-            -PsignPksPath="../properties/finanzas/finanzas-same-plus-dot-v2.pks" \
-            -PsignKeyAlias="Finanzas 2.0"
             --no-daemon \
             --no-parallel \
-            --info
+            --info \
+            -Pandroid.injected.signing.store.file="../properties/finanzas/finanzas-same-plus-dot-v2.pks" \
+            -Pandroid.injected.signing.store.password=${{ secrets.SIGNING_STORE_PASSWORD }} \
+            -Pandroid.injected.signing.key.alias=${{ secrets.SIGNING_KEY_ALIAS }} \
+            -Pandroid.injected.signing.key.password=${{ secrets.SIGNING_KEY_PASSWORD }}
 
       - name: Upload aab
         uses: actions/upload-artifact@v4
