--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
   deploy:
     name: Deploy to Play Store
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     steps:
 
       - uses: actions/checkout@v4
